--- a/kubernetes/app/app.yml
+++ b/kubernetes/app/app.yml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: note-app
         image: rahulsoni285/note-app
-        imagePullPolicy: IfNotPresent
+        # imagePullPolicy: IfNotPresent
         env:
         - name: PORT
           value: "4000"
