--- a/kubernetes/app/app.yml
+++ b/kubernetes/app/app.yml
@@ -14,6 +14,7 @@ spec:
       containers:
       - name: note-app
         image: rahulsoni285/note-app
+        imagePullPolicy: Always
         env:
         - name: PORT
           value: "4000"
