--- a/.github/workflows/build-fe.yml
+++ b/.github/workflows/build-fe.yml
@@ -29,6 +29,7 @@ jobs:
     - uses: anchore/sbom-action@v0
       with: 
         image: test-image:latest
+        output-file: ./report.json
 
     - name: cat
       run: |
