--- a/.github/workflows/prpipeline.yml
+++ b/.github/workflows/prpipeline.yml
@@ -15,7 +15,7 @@ jobs:
         id: run_horusec
         uses: fike/horusec-action@v0.2.2
         with:
-          arguments: -p ./--config-file-path=horusec-config.json
+          arguments: -p ./ --config-file-path=horusec-config.json
 
 
 
