--- a/.github/workflows/prpipeline.yml
+++ b/.github/workflows/prpipeline.yml
@@ -15,8 +15,7 @@ jobs:
         id: run_horusec
         uses: fike/horusec-action@v0.2.2
         with:
-          arguments: -p ./ --config-file-path=horusec-config.json
-
+          arguments: -p ./$WORKING_DIR --config-file-path=$WORKING_DIR/horusec-config.json -O $WORKING_DIR/sonarqube.json --return-error=false
 
 
   
