--- a/.github/workflows/prpipeline.yml
+++ b/.github/workflows/prpipeline.yml
@@ -20,13 +20,15 @@ jobs:
 
   
       - name: output
+        id: comment
         run: |-
           export MESSAGE=$(cat report.txt | grep "Total of Vul")
+          echo "::set-output name=result::$MESSAGE"
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            $MESSAGE
+            ${{ steps.comment.outputs.result }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
