--- a/.github/workflows/prpipeline.yml
+++ b/.github/workflows/prpipeline.yml
@@ -9,13 +9,12 @@ jobs:
       
       - name: Run Horusec
         env:
-          WORKING_DIR: ./
           AUTHOR: rahul.soni@knoldus.com
           HORUSEC_CLI_RETURN_ERROR_IF_FOUND_VULNERABILITY: "false"
         id: run_horusec
         uses: fike/horusec-action@v0.2.2
         with:
-          arguments: -p ./$WORKING_DIR --config-file-path=$WORKING_DIR/horusec-config.json -O $WORKING_DIR/report.txt --return-error=false
+          arguments: -p ./ --config-file-path=horusec-config.json -O report.txt --return-error=false
 
 
   
