--- a/.github/workflows/prpipeline.yml
+++ b/.github/workflows/prpipeline.yml
@@ -18,16 +18,16 @@ jobs:
 
 
   
-      - name: output
-        id: comment
-        run: |-
-          export MESSAGE=$(cat report.txt | grep "Total of Vul")
-          echo "::set-output name=result::$MESSAGE"
+      # - name: output
+      #   id: comment
+      #   run: |-
+      #     export MESSAGE=$(cat report.txt | grep "Total of Vul")
+      #     echo "::set-output name=result::$MESSAGE"
 
-      - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v1
-        with:
-          message: |
-            ${{ steps.comment.outputs.result }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Comment PR
+      #   uses: thollander/actions-comment-pull-request@v1
+      #   with:
+      #     message: |
+      #       ${{ steps.comment.outputs.result }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
