--- a/.github/workflows/prpipeline.yml
+++ b/.github/workflows/prpipeline.yml
@@ -10,11 +10,11 @@ jobs:
       - name: Run Horusec
         env:
           AUTHOR: rahul.soni@knoldus.com
-          HORUSEC_CLI_RETURN_ERROR_IF_FOUND_VULNERABILITY: "false"
+          HORUSEC_CLI_RETURN_ERROR_IF_FOUND_VULNERABILITY: "true"
         id: run_horusec
         uses: fike/horusec-action@v0.2.2
         with:
-          arguments: -p ./ --config-file-path=horusec-config.json -O report.txt --return-error=false
+          arguments: -p ./ --config-file-path=horusec-config.json -O report.txt --return-error=true
 
 
   
